--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
     "lucide-react": "^0.542.0",
+    "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
