--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
